# retrieval

./: README.md  config.toml  pyproject.toml  requirements.txt
src/retrieval/: __main__.py  config.py  database.py  encoder.py
src/retrival/: __main__.py  config.py  database.py  encoder.py  retriver.py
