[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrival"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
description = "EHR vector database generation and retrival"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

