[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrieval"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
description = "EHR vector database generation and retrieval"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
